--- a/templates/gallery.ejs
+++ b/templates/gallery.ejs
@@ -42,7 +42,7 @@
                     </h2>
                 </div>
                 <hr>
-                <div class="d-flex flex-wrap justify-content-center">
+                <div style="position:sticky ;" class="d-flex flex-wrap justify-content-center" id="name">
                     <!-- event images -->
                     <% for(let i=0;i<gallery[key][0].imglist.length;i++){%>
                         <div class="imageon">
