--- a/static/css/index.css
+++ b/static/css/index.css
@@ -124,6 +124,7 @@ h1,h2,h3,h4,h5{
 
 .h2{
     font-size: 3rem;
+    text-align: center;
     color: black;
     font-family: 'Source Serif Pro', serif;
 }
