--- a/static/css/index.css
+++ b/static/css/index.css
@@ -208,5 +208,5 @@ h1,h2,h3,h4,h5,h6{
 }
 
 body,*{
-    font-family: 'Source Serif Pro', serif;
+    font-family: "Times New Roman", Times, serif;
 }
