--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -47,7 +47,7 @@
                     <% for(let i=0;i<events[event].length;i++){%>
                         <div class="one">
                             <div class="boxes">
-                            <a href="/eventname?eventname=<%=event%>&event=<%= events[event][i].topic%>&num=<%= i %>"
+                            <a href="/eventname?eventname=<%= events[event][i].topic%>&num=<%= i %>"
                                     >
                                     <img loading="eager" src="<%= events[event][i].image %>" alt="">
                                 </a>
